# connectors

./: .gitignore  run.sh  setup-shared-venv.sh
lib/subsets_utils/: pyproject.toml
lib/subsets_utils/subsets_utils/: __init__.py  chain_guard.py  checks.py  config.py  delta.py  duckdb.py  health.py  http_client.py  io.py  maintain.py  orchestrator.py  platform_github.py  profile.py  publish.py  raw_manifest.py  runner.py  spec.py  spec_hash.py  sql_transform.py  tracking.py  transform_state.py  transforms.py
lib/subsets_utils/tests/: test_file_transforms.py  test_secret_scoping.py  test_transform_state.py
ops/: lib.py  (+2 more)
src/reuters-institute/: pyproject.toml  tests_download.py
src/reuters-institute/src/: main.py
src/reuters-institute/src/checks/: reuters-institute-demographics.yml  reuters-institute-markets.yml  reuters-institute-questions.yml  reuters-institute-regions.yml  reuters-institute-survey-observations.yml
src/reuters-institute/src/nodes/: reuters_institute.py
src/reuters-institute/src/transforms/: reuters-institute-demographics.sql  reuters-institute-demographics.yml  reuters-institute-markets.sql  reuters-institute-markets.yml  reuters-institute-questions.sql  reuters-institute-questions.yml  reuters-institute-regions.sql  reuters-institute-regions.yml  reuters-institute-survey-observations.sql  reuters-institute-survey-observations.yml
src/reuters-institute/tests/: reuters-institute-demographics.yaml  reuters-institute-markets.yaml  reuters-institute-questions.yaml  reuters-institute-regions.yaml  reuters-institute-survey-observations.yaml
(+393821 files in other folders)
