[project]
name = "subsets-utils"
version = "0.1.0"
description = "Shared connector runtime: retrying HTTP client, raw/Delta IO, DAG runner, spec types."
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "tenacity",
    "pyarrow",
    "deltalake>=1.3.1",
    "duckdb",
    "fsspec>=2024.0",
    "s3fs>=2024.0",
    "psutil>=7.2.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["subsets_utils"]
