[project]
name = "reuters-institute"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "s3fs>=2024.0",
    "fsspec>=2024.0",
    "httpx",
    "requests",
    "pandas",
    "pyarrow",
    "boto3",
    "backoff",
    "ratelimit",
    "tenacity",
    "duckdb",
    "deltalake>=1.3.1",
    "psutil>=7.2.1",
    "tqdm",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "py7zr>=0.20",
    "lxml>=4.9",
    "subsets-utils",
]

[tool.uv.sources]
subsets-utils = { path = "../../lib/subsets_utils", editable = true }
